1.设置gememode内的控制器等 2.初始话pawn中的摄像机摇臂等

--- a/StoneDefence/Config/DefaultEngine.ini
+++ b/StoneDefence/Config/DefaultEngine.ini
@@ -7,4 +7,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Script/StoneDefence.StoneDefenceGameModeBase
 
