--- a/StoneDefence/Config/DefaultEngine.ini
+++ b/StoneDefence/Config/DefaultEngine.ini
@@ -9,4 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Script/StoneDefence.StoneDefenceGameModeBase
+GameInstanceClass=/Script/StoneDefence.TowerDefenceGameInstance
+GameDefaultMap=/Game/Maps/HallMap.HallMap
+EditorStartupMap=/Game/Maps/TestMap.TestMap
 
