--- a/StoneDefence/StoneDefence.uproject
+++ b/StoneDefence/StoneDefence.uproject
@@ -3,16 +3,22 @@
 	"EngineAssociation": "4.24",
 	"Category": "",
 	"Description": "",
-	"Modules": [
-		{
-			"Name": "StoneDefence",
-			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine",
-				"AIModule",
-				"CoreUObject"
-			]
-		}
-	]
+  "Modules": [
+    {
+      "Name": "StoneDefence",
+      "Type": "Runtime",
+      "LoadingPhase": "Default",
+      "AdditionalDependencies": [
+        "Engine",
+        "AIModule",
+        "CoreUObject"
+      ]
+    }
+  ],
+  "Plugins": [
+    {
+      "Name": "ApexDestruction",
+      "Enabled": true
+    }
+  ]
 }
